public/output.css
/* ... */
::backdrop {
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-gradient-from-position:  ;
  --tw-gradient-via-position:  ;
  --tw-gradient-to-position:  ;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
  --tw-contain-size:  ;
  --tw-contain-layout:  ;
  --tw-contain-paint:  ;
  --tw-contain-style:  ;
}

.debug-screens::before {
  position: fixed;
  z-index: 2147483647;
  bottom: 0;
  left: 0;
  padding: .3333333em .5em;
  font-size: 12px;
  line-height: 1;
  font-family: sans-serif;
  background-color: #000;
  color: #fff;
  box-shadow: 0 0 0 1px #fff;
  content: 'screen: _';
}

@media (min-width: 640px) {
  .debug-screens::before {
    content: 'screen: sm';
  }
}

@media (min-width: 768px) {
  .debug-screens::before {
    content: 'screen: md';
  }
}

@media (min-width: 1024px) {
  .debug-screens::before {
    content: 'screen: lg';
  }
}

@media (min-width: 1280px) {
  .debug-screens::before {
    content: 'screen: xl';
  }
}

@media (min-width: 1536px) {
  .debug-screens::before {
    content: 'screen: 2xl';
  }
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.right-3 {
  right: 0.75rem;
}

.top-10 {
  top: 2.5rem;
}

.top-\[4\.3rem\] {
  top: 4.3rem;
}

.top-7 {
  top: 1.75rem;
}

.top-16 {
  top: 4rem;
}

.top-11 {
  top: 2.75rem;
}

.top-6 {
  top: 1.5rem;
}

.top-8 {
  top: 2rem;
}

.top-9 {
  top: 2.25rem;
}

.top-\[2\.1rem\] {
  top: 2.1rem;
}

.ml-3 {
  margin-left: 0.75rem;
}

.ml-\[\.47rem\] {
  margin-left: .47rem;
}

.ml-\[\.85rem\] {
  margin-left: .85rem;
}

.ml-\[5\.5rem\] {
  margin-left: 5.5rem;
}

.mr-7 {
  margin-right: 1.75rem;
}

.mr-\[\.55rem\] {
  margin-right: .55rem;
}

.mr-\[\.5rem\] {
  margin-right: .5rem;
}

.mt-1 {
  margin-top: 0.25rem;
}

.mt-10 {
  margin-top: 2.5rem;
}

.mt-11 {
  margin-top: 2.75rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-24 {
  margin-top: 6rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mt-7 {
  margin-top: 1.75rem;
}

.mt-\[\.2rem\] {
  margin-top: .2rem;
}

.mt-\[\.35rem\] {
  margin-top: .35rem;
}

.mt-\[\.4rem\] {
  margin-top: .4rem;
}

.mt-\[\.65rem\] {
  margin-top: .65rem;
}

.mt-\[1\.2rem\] {
  margin-top: 1.2rem;
}

.mt-\[3\.3rem\] {
  margin-top: 3.3rem;
}

.mt-\[5\.7rem\] {
  margin-top: 5.7rem;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.size-8 {
  width: 2rem;
  height: 2rem;
}

.h-6 {
  height: 1.5rem;
}

.h-7 {
  height: 1.75rem;
}

.h-8 {
  height: 2rem;
}

.h-9 {
  height: 2.25rem;
}

.h-screen {
  height: 100vh;
}

.w-64 {
  width: 16rem;
}

.w-7 {
  width: 1.75rem;
}

.w-8 {
  width: 2rem;
}

.w-9 {
  width: 2.25rem;
}

.w-\[4\.15rem\] {
  width: 4.15rem;
}

.w-\[4\.3rem\] {
  width: 4.3rem;
}

.w-\[8\.15rem\] {
  width: 8.15rem;
}

.w-full {
  width: 100%;
}

.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.place-self-center {
  place-self: center;
}

.rounded-\[\.225rem\] {
  border-radius: .225rem;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.border-\[1px\] {
  border-width: 1px;
}

.border-t-\[1px\] {
  border-top-width: 1px;
}

.border-solid {
  border-style: solid;
}

.border-black-200 {
  --tw-border-opacity: 1;
  border-color: rgb(0 0 0 / var(--tw-border-opacity));
}

.border-gray {
  border-color: #FFFFFF70;
}

.border-white {
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

.bg-\[\#161616\] {
  --tw-bg-opacity: 1;
  background-color: rgb(22 22 22 / var(--tw-bg-opacity));
}

.bg-black {
  --tw-bg-opacity: 1;
  background-color: rgb(25 26 27 / var(--tw-bg-opacity));
}

.bg-black-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
}

.bg-blue-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(218 219 241 / var(--tw-bg-opacity));
}

.bg-blue-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(76 95 213 / var(--tw-bg-opacity));
}

.bg-gray {
  background-color: #FFFFFF70;
}

.px-12 {
  padding-left: 3rem;
  padding-right: 3rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-\[\.85rem\] {
  padding-left: .85rem;
  padding-right: .85rem;
}

.py-28 {
  padding-top: 7rem;
  padding-bottom: 7rem;
}

.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.py-5 {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.pb-\[\.9rem\] {
  padding-bottom: .9rem;
}

.pb-\[8rem\] {
  padding-bottom: 8rem;
}

.pt-20 {
  padding-top: 5rem;
}

.text-center {
  text-align: center;
}

.font-GT-America {
  font-family: GT America Trial, sans-serif;
}

.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-\[1\.08rem\] {
  font-size: 1.08rem;
}

.text-\[1\.1rem\] {
  font-size: 1.1rem;
}

.text-\[1\.28rem\] {
  font-size: 1.28rem;
}

.text-\[1\.29rem\] {
  font-size: 1.29rem;
}

.text-\[1\.45rem\] {
  font-size: 1.45rem;
}

.text-\[1\.51rem\] {
  font-size: 1.51rem;
}
/* ... */

